--- a/public/locales/en/translatable.json
+++ b/public/locales/en/translatable.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "welcome_back": "Welcome back! testedd",
+    "welcome_back": "Welcome back!",
     "welcome_back_description": "To log in, please enter your email or phone number.",
     "login_via": "Log in via:"
   },
